<resources>
    <string name="app_name">SED</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="title_activity_on_click">onClickActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="currentLableText">Current :</string>
    <string name="wattageLableText">Wattage  :</string>
    <string name="previewLableText">Preview :</string>
    <string name="introText">All the details of your device presented here. You can change details and update the information by pressing update button.</string>
    <string name="deviceLableText">Device :</string>
    <string name="todo" />
    <string name="imgeText">No Image to display</string>
    <string name="mainLable">Devises switched on</string>
    <string name="action_order">About</string>
    <string name="deviseNo">No of devices turned on - </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
